# rgetset

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/src/: demo.rs
src/: _common.rs  field_info.rs  lib.rs  r_builder.rs  r_get_set.rs  test.rs
tests/: a.rs
